# ResumeAI

./: README.md  job_description.txt  main.py  pyproject.toml  sandbox.ipynb
assets/: resume.cls  resume_temp.md  resume_temp.tex  sandbox.ipynb  test_resume.txt
utils/: JobDescription.py  Latex.py  Resume.py  ResumeOptimizer.py  mkdown.py
